<resources>
    <string name="app_name">iTeach</string>
    <string name="title_activity_navigation" translatable="false">NavigationActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="TodayNavigation">Today</string>
    <string name="CalendarNavigation">Calendar</string>
    <string name="AssignmentsNavigation">Assignments</string>
    <string name="LecturesNavigation">Lectures</string>
    <string name="StudentsNavigation">Students</string>
    <string name="SettingsNavigation">Settings</string>

    <string name="more">More</string>
    <string name="delete">Delete</string>

    <string-array name="MenuItems">
        <item>Today</item>
        <item>Calendar</item>
        <item>Assignments</item>
        <item>Lectures</item>
        <item>Students</item>
        <item>Profile</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string name="title_activity_lectures" translatable="false">LecturesActivity</string>

    <string name="TeacherTitle">Teacher</string>
    <string name="DescriptionTitle">Description</string>
    <string name="title_activity_assignment" translatable="false">AssignmentActivity</string>
    <string name="DueDateTitle">Due Date</string>
    <string name="title_activity_teacher" translatable="false">TeacherActivity</string>
    <string name="title_activity_student" translatable="false">StudentActivity</string>
    <string name="FistnameTitle">Firstname</string>
    <string name="LastnameTitle">Lastname</string>
    <string name="AddressTitle">Address</string>
    <string name="CountryTitle">Country</string>
    <string name="EndDateTitle">End</string>
    <string name="MailTitle">Mail</string>

    <string name="AddCalendar">Add to phone Calendar</string>

    <string name="Settings">Language</string>

    <string-array name="languages">
        <item>English</item>
        <item>French</item>
        <item>German</item>
    </string-array>


    <!--Hint ressources for the edit text-->
    <string name="hintTitle">Title</string>


    <!--Buttons-->
    <string name="buttonValidate" translatable="false">Validate</string>
    <string name="DayTitle">Day</string>

    <!--Title Date-->

    <string name="titleDate">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>


    <!--Days of week-->
    <string-array name="DaysOfWeekUntilSaturday">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="Assignment">Assignment</string>
    <string name="Lecture">Lecture</string>
    <string name="hintName">Name</string>
    <string name="StartDateTitle">Start</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="DeletedSuccess">deleted successfully</string>
    <string name="HourAlert">Please fill hours</string>
    <string name="TimeAlert">End Time must be after Start Time</string>
    <string name="StudentAlert">Please select minimum a Student</string>
    <string name="SelectTime">Select Time</string>
    <string name="SelectDate">Select Date</string>
    <string name="TitleAlert">This line is required</string>
    <string name="Student">Student</string>
    <string name="AllStudents">All students are already in this lecture</string>
    <string name="ProfileNavigation">Profile</string>
    <string name="chooseLanguage">Choose a language</string>
    <string name="startdateenddate">End date must be after Start date</string>
    <string name="daySummary">Summary of the</string>
    <string name="EndDateStartDate">End date must be after Start date</string>
    <string name="conflict">Conflict with another lecture</string>
    <string name="sync">Data synchronization</string>
    <string name="SyncProgress">Sync in progress</string>
    <string name="AboutText">This application was developed in the context of 644-1 Mobile and Cloud Computing module.</string>
    <string name="About">About</string>
    <string name="AboutText1">The purpose of this course is to introduce us to the Cloud and mobile computing with a practical focus on Google Cloud and Android programming.</string>
    <string name="AboutText2">The Subject that we chose is a Foreign Language School application, on a teacher side, that is supposed to help him to manage all his stuff related to the school.</string>


</resources>
