<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="@dimen/margin_top"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTxtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:hint="@string/DescriptionTitle"
        android:inputType="textMultiLine"
        android:lines="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/titleDate"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/DayTitle"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_title" />

        <Spinner
            android:id="@+id/spinnerDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:textSize="@dimen/text_title" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/titleFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/from"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_title" />

        <EditText
            android:id="@+id/timePickerFrom"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.33"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/titleTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/to"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_title" />

        <EditText
            android:id="@+id/timePickerTo"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.33"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAlignment="center" />

    </LinearLayout>


    <TextView
        android:id="@+id/title_teacher_editlecture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/TeacherTitle"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_title" />

    <TextView
        android:id="@+id/teacherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_child" />

    <TextView
        android:id="@+id/teacherBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/StudentsNavigation"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_title" />

    <ListView
        android:id="@+id/listViewStudents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>